organising the project v1

--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
                 <h2>What Our Customers Say</h2>
                 <div class="testimonial-grid">
                     <div class="testimonial-card">
-                        <img src="./Untitled design (2).png" alt="Customer 1">
+                        <img src="./assets/Anushka_Sharma.png" alt="Customer 1">
                         <p>"Pragati Sales' paints transformed my home beautifully. The colors are vibrant and long-lasting!"</p>
                         <h4>Anushka Sharma</h4>
                     </div>
                     <div class="testimonial-card">
-                        <img src="./Untitled design (1).png" alt="Customer 2">
+                        <img src="./assets/Rohit_Sharma.png" alt="Customer 2">
                         <p>"I'm impressed with the quality and eco-friendly nature of their products. Highly recommended!"</p>
                         <h4>Rohit Sharma</h4>
                     </div>
                     <div class="testimonial-card">
-                        <img src="./Untitled design.png" alt="Customer 3">
+                        <img src="./assets/Priyanka_Chopra.png" alt="Customer 3">
                         <p>"The customer service at Pragati Sales is exceptional. They helped me choose the perfect colors for my office."</p>
                         <h4>Priyanka Chopra</h4>
                     </div>
@@ -98,4 +98,5 @@
     <script src="script.js"></script>
 </body>
 </html>
-<!-- signing off - Jenish Shobhit -->
+<!-- .--- . -. .. ... ....  |  ... .... --- -... .... .. - -->
+<!-- "From Ideas to Reality" -->
