--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <nav>
                 <div class="logo">Pragati Sales</div>
                 <div class="nav-links">
-                    <a href="./about_us.html">About Us</a>
-                    <a href="./products.html">Contact Us</a>
-                    <a href="./contact_us.html">Shop</a>
+                    <a href="./about_us/about_us.html">About Us</a>
+                    <a href="./contact_us/contact_us.html">Contact Us</a>
+                    <a href="./products/products.html">Shop</a>
                 </div>
             </nav>
         </div>
@@ -26,7 +26,7 @@
             <div class="hero-content">
                 <h1>Transform Your World with Colors</h1>
                 <p>Discover premium quality paints for your home and office</p>
-                <a href="./products.html" class="cta-button">Explore Our Collection</a>
+                <a href="./products/products.html" class="cta-button">Explore Our Collection</a>
             </div>
         </section>
 
@@ -88,9 +88,9 @@
         <div class="container">
             <p>&copy; 2024 Pragati Sales. All rights reserved.</p>
             <div class="social-links">
-                <a href="./products.html" aria-label="Shop">📘</a>
-                <a href="./about_us.html" aria-label="About us ">📷</a>             
-                <a href="./contact_us.html" aria-label="Contact us ">📌</a>
+                <a href="./products/products.html" aria-label="Shop">📘</a>
+                <a href="./about_us/about_us.html" aria-label="About us ">📷</a>             
+                <a href="./contact_us/contact_us.html" aria-label="Contact us ">📌</a>
             </div>
         </div>
     </footer>
